--- a/selenium/pom.xml
+++ b/selenium/pom.xml
@@ -3,9 +3,9 @@
   <groupId>DeviceFarm</groupId>
   <artifactId>DeviceFarm</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+
   <dependencies>
-	 
+
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
@@ -23,17 +23,17 @@
     </dependency>
 
 
-	<dependency>
-		<groupId>org.seleniumhq.selenium</groupId>
-		<artifactId>selenium-java</artifactId>
-		<version>3.141.59</version>
-	</dependency>
-	<dependency>
-		<groupId>org.seleniumhq.selenium</groupId>
-		<artifactId>selenium-chrome-driver</artifactId>
-		<version>2.50.0</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/regions -->
+        <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>3.141.59</version>
+        </dependency>
+        <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-chrome-driver</artifactId>
+                <version>2.50.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/regions -->
     <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>regions</artifactId>
@@ -47,41 +47,41 @@
         <version>2.13.71</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-core -->
-	<dependency>
-   	 	<groupId>com.amazonaws</groupId>
-   	 	<artifactId>aws-java-sdk-core</artifactId>
-   		<version>1.12.24</version>
-	</dependency>
-    
+        <dependency>
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-java-sdk-core</artifactId>
+                <version>1.12.24</version>
+        </dependency>
+
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-polly -->
-	<dependency>
-    	<groupId>com.amazonaws</groupId>
-    	<artifactId>aws-java-sdk-polly</artifactId>
-   		<version>1.12.24</version>
-	</dependency>
+        <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk-polly</artifactId>
+                <version>1.12.24</version>
+        </dependency>
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-core -->
-	<dependency>
-    	<groupId>com.amazonaws</groupId>
-    	<artifactId>aws-lambda-java-core</artifactId>
-    	<version>1.2.1</version>
-	</dependency>
+        <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-lambda-java-core</artifactId>
+        <version>1.2.1</version>
+        </dependency>
     <dependency>
-		<groupId>org.testng</groupId>
-		<artifactId>testng</artifactId>
-		<version>6.8</version>
-		<scope>compile</scope>
-	</dependency>  
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>6.8</version>
+                <scope>compile</scope>
+        </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    
-	
+
+
 
   </dependencies>
-  
+
     <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
@@ -98,21 +98,25 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+              </configuration>
         </plugin>
-        
-        
-        
-        
+
+
+
+
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
-	<configuration>
-		<source>1.11</source>
+        <configuration>
+                <source>1.11</source>
                 <target>1.11</target>
-		<suiteXmlFiles>
-			<suiteXmlFile>testfarm.xml</suiteXmlFile>
-		</suiteXmlFiles>
-	</configuration>  
+                <suiteXmlFiles>
+                        <suiteXmlFile>testfarm.xml</suiteXmlFile>
+                </suiteXmlFiles>
+        </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
@@ -138,6 +142,6 @@
       </plugins>
     </pluginManagement>
   </build>
-  
-  
+
+
 </project>
